css files are changed to dlc primary color

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -44,7 +44,7 @@ h6,
 header .navbar-default {
   background: none;
   border: none;
-  padding-top: 40px;
+  padding-top: 30px;
   padding-bottom: 20px;
   -webkit-transition: all 0.25s ease-in-out;
   -moz-transition: all 0.25s ease-in-out;
@@ -53,12 +53,12 @@ header .navbar-default {
   transition: all 0.25s ease-in-out;
 }
 header .navbar-default ul.navbar-nav {
-  padding-top: 55px;
+  padding-top: 20px;
 }
 header .navbar-default ul.navbar-nav li a {
   text-transform: capitalize;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 18px;
   padding: 7px 20px;
   -webkit-transition: all 0.25s ease-in-out;
   -moz-transition: all 0.25s ease-in-out;
@@ -674,8 +674,8 @@ form textarea.form-control {
     margin-top: 11px;
     margin-right: 20px;
     background: none;
-    border: 2px solid #ffffff;
-    color: #ffffff;
+    border: 2px solid #222;
+    color: #222;
     -webkit-border-radius: 5em;
     -moz-border-radius: 5em;
     -ms-border-radius: 5em;
@@ -743,21 +743,21 @@ form textarea.form-control {
   }
 }
 header {
-  background: #66cdcc;
+  background: #7BAA2B;
   /* Old browsers */
-  background: -moz-linear-gradient(-45deg, #66cdcc 0%, #336799 100%);
+  background: -moz-linear-gradient(-45deg, #7BAA2B 0%, #336799 100%);
   /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, #66cdcc), color-stop(100%, #336799));
+  background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, #7BAA2B), color-stop(100%, #336799));
   /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(-45deg, #66cdcc 0%, #336799 100%);
+  background: -webkit-linear-gradient(-45deg, #7BAA2B 0%, #336799 100%);
   /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(-45deg, #66cdcc 0%, #336799 100%);
+  background: -o-linear-gradient(-45deg, #7BAA2B 0%, #336799 100%);
   /* Opera 11.10+ */
-  background: -ms-linear-gradient(-45deg, #66cdcc 0%, #336799 100%);
+  background: -ms-linear-gradient(-45deg, #7BAA2B 0%, #336799 100%);
   /* IE10+ */
-  background: linear-gradient(-45deg, #66cdcc 0%, #336799 100%);
+  background: linear-gradient(-45deg, #7BAA2B 0%, #336799 100%);
   /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#66cdcc, endColorstr=#336799, GradientType=1);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#7BAA2B, endColorstr=#336799, GradientType=1);
   /* IE6-9 fallback on horizontal gradient */
 }
 header .navbar-default ul.navbar-nav li a {
@@ -816,10 +816,10 @@ header .navbar-default ul.navbar-nav li a:hover {
   transition: all 0.25s ease-in-out;
 }
 header .navbar-default.scrolled {
-  border-bottom: 3px solid #336799;
+  border-bottom: 3px solid #7BAA2B;
 }
 header .navbar-default.scrolled ul.navbar-nav li a {
-  color: #336799;
+  color: #7BAA2B;
 }
 header .navbar-default.scrolled ul.navbar-nav li a:hover {
   color: #336799;
@@ -828,45 +828,45 @@ header .navbar-default.scrolled ul.navbar-nav li a:hover:after {
   background: #336799;
 }
 header .navbar-default.scrolled .navbar-brand {
-  background: #336799;
+  background: #FFF;
 }
 section .section-heading .divider:after {
-  background: #66cdcc;
+  background: #7BAA2B;
 }
 section#about .about-item i.fa {
-  border: 2px solid #66cdcc;
-  color: #66cdcc;
+  border: 2px solid #7BAA2B;
+  color: #7BAA2B;
 }
 section#about .about-item:hover i.fa {
   color: #ffffff;
-  background: #66cdcc;
+  background: #7BAA2B;
 }
 section#about .about-item:hover h3 {
-  color: #66cdcc;
+  color: #7BAA2B;
 }
 section#features {
   background: #f6f6f6;
 }
 section#features header h1:after {
-  background: #66cdcc;
+  background: #7BAA2B;
 }
 section#features .media i.fa {
-  border: 2px solid #66cdcc;
-  color: #66cdcc;
+  border: 2px solid #7BAA2B;
+  color: #7BAA2B;
 }
 section#features .media:hover i.fa {
   color: #ffffff;
-  background: #66cdcc;
+  background: #7BAA2B;
 }
 section#features .media:hover h3 {
-  color: #66cdcc;
+  color: #7BAA2B;
 }
 section#features .media.active i.fa {
   color: #ffffff;
-  background: #66cdcc;
+  background: #7BAA2B;
 }
 section#features .media.active .media-heading {
-  color: #66cdcc;
+  color: #7BAA2B;
 }
 section#reviews {
   background: url("../img/freeze/bk-freeze.jpg");
@@ -884,10 +884,10 @@ section#reviews .review-filtering .review .review-comment {
   background: #ffffff;
 }
 section#reviews .review-filtering .review .review-comment h3 {
-  color: #66cdcc;
+  color: #7BAA2B;
 }
 section#reviews .review-filtering .review .review-comment p span i {
-  color: #66cdcc;
+  color: #7BAA2B;
 }
 section#reviews .review-filtering .review .review-comment:after {
   border-right-color: #ffffff;
@@ -897,10 +897,10 @@ section#reviews .review-filtering .slick-dots li button {
   border: 2px solid #ffffff;
 }
 section#reviews .review-filtering .slick-dots li.slick-active button {
-  background: #66cdcc;
+  background: #7BAA2B;
 }
 section#screens header h1:after {
-  background: #66cdcc;
+  background: #7BAA2B;
 }
 section#screens .slider div img {
   border: 2px solid #e5e5e5;
@@ -912,7 +912,7 @@ section#screens .slider .slick-dots li button {
   background: #999999;
 }
 section#screens .slider .slick-dots li.slick-active button {
-  background: #66cdcc;
+  background: #7BAA2B;
 }
 section#screens .filter a {
   border: 2px solid #cccccc;
@@ -920,20 +920,20 @@ section#screens .filter a {
 }
 section#screens .filter a:hover {
   color: #ffffff;
-  background: #66cdcc;
-  border-color: #66cdcc;
+  background: #7BAA2B;
+  border-color: #7BAA2B;
 }
 section#screens .filter a.active {
   color: #ffffff;
-  background: #66cdcc;
-  border-color: #66cdcc;
+  background: #7BAA2B;
+  border-color: #7BAA2B;
 }
 /* demo video Section */
 section#demo {
   background: #f6f6f6;
 }
 section#demo header h1:after {
-  background: #66cdcc;
+  background: #7BAA2B;
 }
 /* Get app Section */
 section#getApp {
@@ -960,43 +960,43 @@ section#getApp .platforms .media:hover {
 }
 section#getApp .platforms .media:hover a i,
 section#getApp .platforms .media:hover a div.media-body {
-  color: #66cdcc;
+  color: #7BAA2B;
 }
 /* support section */
 section#support header h1:after {
-  background: #66cdcc;
+  background: #7BAA2B;
 }
 section#support .media i.fa {
-  border: 2px solid #66cdcc;
-  color: #66cdcc;
+  border: 2px solid #7BAA2B;
+  color: #7BAA2B;
 }
 section#support .media a {
-  color: #66cdcc;
+  color: #7BAA2B;
 }
 section#support .media:hover i.fa {
   color: #ffffff;
-  background: #66cdcc;
+  background: #7BAA2B;
 }
 section#support .media:hover h3 {
-  color: #66cdcc;
+  color: #7BAA2B;
 }
 /* footer section */
 footer {
-  background: #66cdcc;
+  background: #7BAA2B;
   /* Old browsers */
-  background: -moz-linear-gradient(-45deg, #66cdcc 0%, #336799 100%);
+  background: -moz-linear-gradient(-45deg, #7BAA2B 0%, #336799 100%);
   /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, #66cdcc), color-stop(100%, #336799));
+  background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, #7BAA2B), color-stop(100%, #336799));
   /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(-45deg, #66cdcc 0%, #336799 100%);
+  background: -webkit-linear-gradient(-45deg, #7BAA2B 0%, #336799 100%);
   /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(-45deg, #66cdcc 0%, #336799 100%);
+  background: -o-linear-gradient(-45deg, #7BAA2B 0%, #336799 100%);
   /* Opera 11.10+ */
-  background: -ms-linear-gradient(-45deg, #66cdcc 0%, #336799 100%);
+  background: -ms-linear-gradient(-45deg, #7BAA2B 0%, #336799 100%);
   /* IE10+ */
-  background: linear-gradient(-45deg, #66cdcc 0%, #336799 100%);
+  background: linear-gradient(-45deg, #7BAA2B 0%, #336799 100%);
   /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#66cdcc, endColorstr=#336799, GradientType=1);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#7BAA2B, endColorstr=#336799, GradientType=1);
   /* IE6-9 fallback on horizontal gradient */
 }
 footer .social a {
@@ -1009,7 +1009,7 @@ footer .social a:hover {
   background: #ffffff;
 }
 footer .social a:hover i {
-  color: #66cdcc;
+  color: #7BAA2B;
 }
 footer .rights {
   color: #ffffff;
@@ -1024,13 +1024,13 @@ footer .rights a {
   border: 1px solid rgba(0, 0, 0, 0);
 }
 .btn.btn-primary {
-  color: #66cdcc;
-  border-color: #66cdcc;
+  color: #7BAA2B;
+  border-color: #7BAA2B;
 }
 .btn.btn-primary:hover {
   color: #ffffff;
-  background: #66cdcc;
-  border-color: #66cdcc;
+  background: #7BAA2B;
+  border-color: #7BAA2B;
 }
 .btn.btn-primary.inverse {
   color: #ffffff;
@@ -1038,8 +1038,8 @@ footer .rights a {
 }
 .btn.btn-primary.inverse:hover {
   color: #ffffff;
-  background: #66cdcc;
-  border-color: #66cdcc;
+  background: #7BAA2B;
+  border-color: #7BAA2B;
 }
 .btn.btn-default {
   background: #ffffff;
@@ -1064,7 +1064,7 @@ footer .rights a {
   color: #336799;
 }
 form .form-control:focus {
-  border-color: #66cdcc;
+  border-color: #7BAA2B;
   color: #999999;
 }
 @media screen and (max-width: 640px) {
@@ -1083,19 +1083,19 @@ form .form-control:focus {
     display: none;
   }
   header .navbar-default ul.navbar-nav li a:hover {
-    color: #66cdcc;
+    color: #7BAA2B;
   }
   header .navbar-default .navbar-collapse {
     background: #336799;
   }
   header .navbar-default.scrolled {
-    background: #336799;
+    background: #FFF;
   }
   header .navbar-default.scrolled ul.navbar-nav li a {
     color: #ffffff;
   }
   header .navbar-default.scrolled ul.navbar-nav li a:hover {
-    color: #66cdcc;
+    color: #7BAA2B;
   }
 }
 .pre-loader {
